# mcp-template

./: .containerignore  AGENTS.md  CLAUDE.md  Containerfile  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/commands/: AGENTS.md  commit.md  extract-learnings.md  extract-templates.md  git-squash.md  update-agents-md.md
.agents/docs/architecture/: decisions.md
.agents/docs/conventions/: coding-style.md  imports.md  mcp-structure.md  naming.md  project-structure.md
.agents/docs/patterns/: configuration.md  error-handling.md  logging.md  mcp-patterns.md  typing.md
.agents/docs/tooling/: development-setup.md  fastmcp.md  pytest.md  ruff.md  uv.md
.agents/docs/workflows/: contributing.md  pr-process.md  releases.md  testing.md
.agents/scratch/: AGENTS.md
.agents/scratch/context/: _template.md
.agents/scratch/decisions/: _template.md
.agents/scratch/notes/: _template.md
.agents/scratch/research/: _template.md
docs/: installation.md
examples/integrations/: README.md
examples/integrations/claude-code/: .mcp.json  README.md  install.sh  uninstall.sh
examples/integrations/claude-desktop/: README.md  config.json
examples/integrations/continue/: README.md  config.json
examples/integrations/custom/: README.md  example-client.py
examples/integrations/zed/: README.md  settings.json
src/: AGENTS.md
src/mcp_server/: __init__.py  __main__.py  config.py  server.py
src/mcp_server/prompts/: AGENTS.md  __init__.py  example_prompts.py
src/mcp_server/resources/: AGENTS.md  __init__.py  example_resources.py
src/mcp_server/tools/: AGENTS.md  __init__.py  example_tools.py
tests/: AGENTS.md  conftest.py  test_prompts.py  test_resources.py  test_tools.py
